Fix header on mobiles

--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -41,7 +41,7 @@ header {
 			}
 
 			.logo {
-				width:300px;
+				width:200px;
 				height:40px;
 				display:block;
 				background-repeat:no-repeat;
